--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.2.2",
   "author": "Jo Liss <joliss42@gmail.com>",
   "main": "index.js",
+  "files": [
+    "index.js"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
