--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "type": "git",
     "url": "https://github.com/joliss/promise-map-series"
   },
-  "dependencies": {
-    "rsvp": "^3.0.14"
-  },
   "devDependencies": {
-    "tape": "^2.5.0"
+    "tape": "^4.11.0"
+  },
+  "engines": {
+    "node": "10.* || >= 12.*"
   },
   "scripts": {
     "test": "tape test.js"
